--- a/Fylo/index-me.html
+++ b/Fylo/index-me.html
@@ -153,10 +153,9 @@
 
         </ul>
         <ul class="sm-icons">
-          <li>
-            <a href="#" class="footerlinks">facebook</i></a></li>
-          <li><a href="" class="footerlinks">instagram</a></li>
-          <li><a href="" class="footerlinks">twitter</a></li>
+          <li><a href="#" class="footerlinks"><img src="images/New folder (3)/facebook.svg" alt="facebook"></a></li>
+          <li><a href="#" class="footerlinks"><img src="images/New folder (3)/instagram.svg" alt="instagram"></a></li>
+          <li><a href="#" class="footerlinks"><img src="images/New folder (3)/twitter.svg" alt="twitter"></a></li>
           
         </ul>
         
